--- a/package.json
+++ b/package.json
@@ -9,32 +9,28 @@
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
-    "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
-    "grommet": "^2.16.0",
-    "grommet-icons": "^4.5.0",
-    "lodash": "^4.17.20",
-    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.2",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.16",
-    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
     "@types/react-redux": "^7.1.11",
     "@types/styled-components": "^5.1.4",
+    "@types/styled-system": "^5.1.10",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
@@ -65,6 +61,7 @@
     "typescript": "^4.1.2"
   },
   "keywords": [
+    "react",
     "gatsby",
     "styled-components"
   ],
