inital config styled-component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,7 @@
       "@ui": ["components/ui/index.ts"],
       "@layout": ["components/layout/index.ts"],
       "@todo": ["components/todo/index.ts"],
-      "@themes": ["themes/index.ts"]
+      "@theme": ["theme/index.ts"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
