--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.2",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
+    "styled-normalize": "^8.0.7",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
