--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.2",
+    "react-styled-flexboxgrid": "^3.2.1",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
