--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,7 @@
       "@state/filter": ["state/filter/index.ts"],
       "@ui": ["components/ui/index.ts"],
       "@layout": ["components/layout/index.ts"],
-      "@todo": ["components/todo/index.ts"],
+      "@event": ["components/event/index.ts"],
       "@theme": ["theme/index.ts"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
