--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,7 @@
       "@state/todos": ["state/todos/index.ts"],
       "@state/filter": ["state/filter/index.ts"],
       "@ui": ["components/ui/index.ts"],
-      "@layout": ["components/layout/index.ts"],
+      "@layout": ["layout/index.ts"],
       "@event": ["components/event/index.ts"],
       "@theme": ["theme/index.ts"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
