--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,6 +75,6 @@
     "@typescript-eslint/no-unsafe-member-access": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
     "unicorn/prevent-abbreviations": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
   }
 }
