--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kalyan Annamalai",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "@types/lodash.debounce": "^4.0.6",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
@@ -13,6 +14,7 @@
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
