--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.keyby": "^4.6.6",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
@@ -15,6 +16,8 @@
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.keyby": "^4.6.0",
+    "lodash.snakecase": "^4.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.16",
+    "@types/lodash.snakecase": "^4.1.6",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
