--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
+    "install": "^0.13.0",
     "lodash.debounce": "^4.0.8",
     "lodash.keyby": "^4.6.0",
     "lodash.snakecase": "^4.1.1",
+    "npm": "^7.5.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-epic-spinners": "^0.5.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.2",
     "react-styled-flexboxgrid": "^3.2.1",
