--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,14 +42,7 @@
     /* Module Resolution Options */
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "baseUrl": "src" /* Base directory to resolve non-absolute module names. */,
-    "paths": {
-      "@state/event": ["state/event/index.ts"],
-      "@state/filter": ["state/filter/index.ts"],
-      "@ui": ["components/ui/index.ts"],
-      "@layout": ["layout/index.ts"],
-      "@event": ["components/event/index.ts"],
-      "@theme": ["theme/index.ts"]
-    } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
+    // "paths": {} /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     "types": [
