--- a/package.json
+++ b/package.json
@@ -1,51 +1,37 @@
 {
-  "name": "gatsby-styled-components",
+  "name": "gatsby-material-ui",
   "private": true,
-  "description": "Gatsby Styled Components",
+  "description": "Gatsby Material UI",
   "version": "0.1.0",
   "author": "Kalyan Annamalai",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/system": "^4.11.3",
     "@reduxjs/toolkit": "^1.5.0",
-    "@types/lodash.debounce": "^4.0.6",
-    "@types/lodash.keyby": "^4.6.6",
-    "axios": "^0.21.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-sharp": "^2.6.0",
     "install": "^0.13.0",
-    "lodash.debounce": "^4.0.8",
-    "lodash.keyby": "^4.6.0",
     "lodash.shuffle": "^4.2.0",
-    "lodash.snakecase": "^4.1.1",
-    "npm": "^7.5.4",
+    "npm": "^7.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-epic-spinners": "^0.5.0",
     "react-helmet": "^6.1.0",
-    "react-redux": "^7.2.2",
-    "react-styled-flexboxgrid": "^3.2.1",
-    "redux-saga": "^1.1.3",
-    "styled-components": "^5.2.1",
-    "styled-normalize": "^8.0.7",
-    "styled-system": "^5.1.5"
+    "react-redux": "^7.2.2"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.16",
     "@types/lodash.shuffle": "^4.2.6",
-    "@types/lodash.snakecase": "^4.1.6",
-    "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
-    "@types/react-redux": "^7.1.11",
-    "@types/styled-components": "^5.1.4",
-    "@types/styled-system": "^5.1.10",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
@@ -79,7 +65,7 @@
   "keywords": [
     "react",
     "gatsby",
-    "styled-components"
+    "material ui"
   ],
   "scripts": {
     "build": "gatsby build",
