--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/system": "^4.11.3",
     "@reduxjs/toolkit": "^1.5.0",
+    "classnames": "^2.2.6",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
