--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^7.2.2"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.16",
     "@types/lodash.shuffle": "^4.2.6",
     "@types/react": "^17.0.0",
