--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-redux": "^7.2.2"
+    "react-redux": "^7.2.2",
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
@@ -34,6 +35,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-redux": "^7.1.16",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
